Fixed overflow by adding 0 x margin on row in sectioncontainer

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,7 +1,6 @@
 .about-wrapper {
     background-color: #254441;
-    padding: 2rem 0;
-    width: 100%;
+    padding: 2rem 0; 
 }
 
 .about-container {
