--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,7 +1,6 @@
 .contact-wrapper {
     background-color: #254441;
     padding: 2rem 0;
-    width: 100%;
 }
 
 .contact-container {
