--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,7 +1,6 @@
 .projects-wrapper {
     background-color: #EAF3EE;
-    padding: 0;
-
+    padding: 2rem 0;
 }
 
 .card-container {
