--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -1,7 +1,6 @@
 .skills-wrapper {
     background-color: #9e4449;
     padding: 2rem 0;
-    width: 100%;
 }
 
 .skills-container {
